--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,6 +1,8 @@
 version: 0.2
 phases:
   install:
+    runtime-versions:
+      nodejs: 20
     commands:
       - echo "=== Installing Dependencies ==="
       - rm -rf node_modules
