--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,16 +1,20 @@
 version: 0.2
+
 phases:
   install:
+    runtime-versions:
+      nodejs: 18
     commands:
-      - echo "=== Installing Dependencies ==="
-      - node -v
-      - npm -v
+      - echo "=== Move to project root ==="
+      - cd ./librarysystem_front
+      - echo "=== Install dependencies ==="
+      - npm install -g npm@9
       - rm -rf node_modules
       - npm install --legacy-peer-deps
 
   pre_build:
     commands:
-      - echo "=== Cleaning Previous Artifacts & Vite Cache ==="
+      - echo "=== Clean previous build artifacts ==="
       - rm -rf dist
       - rm -rf node_modules/.vite
       - git fetch --all
@@ -18,12 +22,13 @@ phases:
 
   build:
     commands:
-      - echo "=== Running Build ==="
+      - echo "=== Run build ==="
       - npm run build
+
 artifacts:
   files:
     - '**/*'
-  base-directory: dist   
+  base-directory: dist
 
 cache:
-  paths: []  
+  paths: []
