Update buildspec.yml for backend directory checks

--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,17 +9,21 @@ phases:
       - cd ./librarysystem_front
       - echo "install global dependencies if needed"
       - npm install -g npm@9
-      - cd ./library-backend 
       - ./gradlew clean
   pre_build:
     commands:
       - echo "install project dependencies"
       - rm -rf node_modules
       - npm install
+      - if [ ! -d "./library-backend" ]; then echo "Directory library-backend not found"; exit 1; fi
+      - chmod +rx ./library-backend
+      - ls -ld ./library-backend
   build:
     commands:
       - echo "run React build"
       - npm run build
+      - echo "Entering library-backend directory..."
+      - cd ./library-backend
       - echo "Building backend..."
       - cd ./library-backend 
       - ./gradlew build
