--- a/buildspec.yml
+++ b/buildspec.yml
@@ -9,17 +9,24 @@ phases:
       - cd ./librarysystem_front
       - echo "install global dependencies if needed"
       - npm install -g npm@9
-      - ../library-backend/gradlew clean
+      - yum update -y
   pre_build:
     commands:
       - echo "install project dependencies"
-      - cd ../librarysystem_front
       - npm install
+      - cd ..
+      - echo "Checking library-backend directory..."
+      - if [ ! -d "./library-backend" ]; then echo "Directory library-backend not found"; exit 1; fi
+      - chmod +rx ./library-backend               # 디렉토리 접근 권한
+      - chmod +x ./library-backend/gradlew        # gradlew 실행 권한 부여
+      - ls -l ./library-backend/gradlew           # 권한 확인
   build:
     commands:
+      - cd ./librarysystem_front
       - npm run build
       - cd ../library-backend
-      - ./gradlew build
+      - echo "Current directory: $(pwd)"
+      - ./gradlew clean build  
       - echo "Build completed."
     finally:
       - echo "Finally block executed."
