--- a/buildspec.yml
+++ b/buildspec.yml
@@ -8,18 +8,18 @@ phases:
     commands:
       - yum update -y
       - cd ./library_front
-      - echo "install global dependencies if needed"
+      - echo "Install global dependencies if needed"
       - npm install -g npm@9
   pre_build:
     commands:
-      - echo "install project dependencies"
+      - echo "Install project dependencies"
       - npm install
       - cd ..
       - echo "Checking library_back directory..."
-      - if [ ! -d "./library_back" ]; then echo "Directory library-backend not found"; exit 1; fi
-      - chmod +rx ./library_backend # 디렉토리 접근 권한
+      - if [ ! -d "./library_back" ]; then echo "Directory library_back not found"; exit 1; fi
+      - chmod +rx ./library_back        # 디렉토리 접근 권한
       - chmod +x ./library_back/gradlew # gradlew 실행 권한 부여
-      - ls -l ./library_back/gradlew # 권한 확인
+      - ls -l ./library_back/gradlew    # 권한 확인
   build:
     commands:
       - cd ./library_front
@@ -32,5 +32,5 @@ phases:
 
 artifacts:
   files:
-    - ../library_front/dist
-    - ../library_back/build/libs/*.jar
+    - library_front/dist/**/*
+    - library_back/build/libs/*.jar
