--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,15 +7,14 @@ phases:
       java: corretto17
     commands:
       - apt-get update -y
-      - apt-get upgrade -y
-      - cd ./library_front
-      - npm install
+      - apt-get install -y wget unzip
+      - chmod +x ./library_back/gradlew
+      - ./library_back/gradlew --version
   pre_build:
     commands:
+      - cd ./library_front
+      - npm install
       - cd ..
-      - chmod +rx ./library_back        # 디렉토리 접근 권한
-      - chmod +x ./library_back/gradlew # gradlew 실행 권한 부여
-      - ls -l ./library_back/gradlew    # 권한 확인
       - ./library_back/gradlew clean
   build:
     commands:
