--- a/buildspec.yml
+++ b/buildspec.yml
@@ -5,7 +5,7 @@ phases:
     commands:
       - echo Logging in to Amazon ECR...
       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 416225317325.dkr.ecr.us-east-2.amazonaws.com
-      - REPOSITORY_URI=416225317325.dkr.ecr.us-east-2.amazonaws.com/hcoh-library-proj
+      - REPOSITORY_URI=416225317325.dkr.ecr.us-east-2.amazonaws.com/swban/ai08_05
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
       - IMAGE_TAG=${COMMIT_HASH:=latest}
   build:
@@ -27,55 +27,3 @@ artifacts:
     - librarysystem_front/service.yml
 
 
-# version: 0.2
-
-# phases:
-#   install:
-#     commands:
-#       - echo Installing kubectl...
-#       - curl -O https://s3.us-west-2.amazonaws.com/amazon-eks/1.31.0/2024-09-12/bin/linux/amd64/kubectl
-#       - chmod +x ./kubectl
-#       - mkdir -p $HOME/bin && cp ./kubectl $HOME/bin/kubectl && export PATH=$PATH:$HOME/bin
-
-#   pre_build:
-#     commands:
-#       - echo Logging in to Amazon ECR...
-#       - aws ecr get-login-password --region us-east-2 | docker login --username AWS --password-stdin 416225317325.dkr.ecr.us-east-2.amazonaws.com
-      
-#       # ▼▼▼ [복구 완료] 다시 사용자님의 개인 레포지토리 주소로 변경했습니다! ▼▼▼
-#       - REPOSITORY_URI=416225317325.dkr.ecr.us-east-2.amazonaws.com/hcoh-library-proj
-      
-#       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-#       - IMAGE_TAG=${COMMIT_HASH:=latest}
-
-#   build:
-#     commands:
-#       - echo Build started on `date`
-      
-#       # [디버깅] 파일 목록 확인
-#       - echo "=== File List Debugging ==="
-#       - ls -R
-#       - echo "==========================="
-
-#       - echo Building the Docker image...
-#       # Dockerfile 경로 유지
-#       - docker build -t $REPOSITORY_URI:latest librarysystem_front
-#       - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
-      
-#       - echo Pushing the Docker image...
-#       - docker push $REPOSITORY_URI:latest
-#       - docker push $REPOSITORY_URI:$IMAGE_TAG
-      
-#       - echo Updating kubeconfig...
-#       - aws eks update-kubeconfig --name hcoh-library-cluster --region us-east-2
-      
-#       - echo Deploying to EKS...
-#       # 파일명(.yml) 유지
-#       - kubectl apply -f librarysystem_front/deployment.yml
-#       - kubectl apply -f librarysystem_front/service.yml
-      
-#       - echo Deployment completed!
-
-#   post_build:
-#     commands:
-#       - echo All done!
