--- a/librarysystem_front/deployment.yml
+++ b/librarysystem_front/deployment.yml
@@ -15,6 +15,6 @@ spec:
       containers:
       - name: library-front-container
         # ▼ [복구 완료] 다시 사용자님의 개인 레포지토리 주소로 변경했습니다!
-        image: 416225317325.dkr.ecr.us-east-2.amazonaws.com/hcoh-library-proj:latest
+        image: 416225317325.dkr.ecr.us-east-2.amazonaws.com/swban/ai08_05:latest
         ports:
         - containerPort: 80
